# C_Learnning_Project

./: .gitignore  CMakeLists.txt  add_problem.bat  add_problem.ps1  main.c
include/: problems.h
src/: problem_001.c  problem_002.c  problem_003.c  problem_004.c  problem_005.c  problem_006.c  problem_007.c  problem_008.c  problem_009.c  problem_010.c  problem_011.c  problem_012.c  problem_013.c  problem_014.c  problem_015.c  problem_016.c  problem_017.c  problem_018.c  problem_019.c  problem_020.c  problem_021.c  problem_022.c  problem_023.c  problem_024.c  problem_025.c  problem_026.c  problem_027.c  problem_028.c  problem_029.c  problem_030.c  problem_031.c  problem_032.c  problem_033.c  problem_034.c  problem_035.c  problem_036.c  problem_037.c  problem_038.c  problem_039.c  problem_040.c
